--- a/package.json
+++ b/package.json
@@ -66,9 +66,15 @@
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.21.0",
     "@babel/runtime": "^7.19.0",
+    "@bigbinary/neeto-cist": "^1.0.5",
+    "@bigbinary/neeto-commons-frontend": "^3.0.4",
     "@bigbinary/neeto-icons": "^1.8.17",
+    "@bigbinary/neeto-molecules": "^1.1.69",
+    "@bigbinary/neeto-time-zones": "^0.5.1",
     "@bigbinary/neetoui": "^4.0.3",
     "@emotion/is-prop-valid": "^1.2.0",
+    "@honeybadger-io/js": "^6.6.1",
+    "@honeybadger-io/react": "^6.1.11",
     "@svgr/webpack": "6.5.1",
     "antd": "^4.23.1",
     "axios": "^0.26.1",
@@ -82,9 +88,10 @@
     "compression-webpack-plugin": "^10.0.0",
     "core-js": "3.21.1",
     "css-loader": "^6.7.3",
+    "dayjs": "^1.11.10",
     "dotenv-webpack": "^8.0.1",
     "formik": "^2.2.9",
-    "i18next": "21.7.0",
+    "i18next": "^23.7.6",
     "ignore-loader": "^0.1.2",
     "js-logger": "^1.6.1",
     "mini-css-extract-plugin": "^2.7.5",
@@ -96,9 +103,12 @@
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "query-string": "^8.1.0",
-    "ramda": "^0.29.0",
+    "ramda": "^0.29.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-i18next": "^13.5.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "5.3.3",
     "react-router-nav-prompt": "^0.4.1",
     "react-toastify": "8.0.2",
@@ -115,6 +125,7 @@
     "webpack-cli": "^4.10.0",
     "webpack-merge": "^5.8.0",
     "webpack-sources": "^3.2.3",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.4.6"
   }
 }
