Added alias for neeto-cist

--- a/app/javascript/src/jsconfig.json
+++ b/app/javascript/src/jsconfig.json
@@ -18,6 +18,7 @@
       "neetomolecules/*": [
         "../../../node_modules/@bigbinary/neeto-molecules/*"
       ],
+      "neetocist": ["../../../node_modules/@bigbinary/neeto-cist"],
       "lib": "src/lib"
     },
     "pretty": true,
